# ralph-dashboard

./: .env.example  .gitignore  AGENTS.md  Dockerfile  IMPLEMENTATION_PLAN.md  PROMPT.md  README.md  SKILL.md  TASK.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/auth/: dependencies.py  router.py  schemas.py  service.py  setup_user.py
backend/app/cli/: __init__.py  dashboard.py
backend/app/control/: __init__.py  models.py  process_manager.py  router.py
backend/app/files/: __init__.py  router.py  service.py  (+2 more)
backend/tests/: __init__.py  test_antique_catalogue_e2e.py  test_auth_dependencies.py  test_auth_router.py  test_auth_service.py  test_auth_setup_user.py  test_config.py  test_control_router.py  test_dashboard_cli.py  test_database.py  test_file_watcher_service.py  test_files_router.py  test_git_router.py  test_git_service.py  test_iteration_log_parser.py  test_iteration_router.py  test_iteration_service.py  test_iterations_jsonl_parser.py  test_main.py  test_main_static_frontend.py  test_notifications_router.py  test_parser_fixtures.py  test_plan_parser.py  test_plan_router.py  test_process_manager.py  test_project_discovery.py  test_project_router.py  test_project_service.py  test_project_status.py  test_specs_router.py  test_stats_report.py  test_stats_report_router.py  test_stats_router.py  test_stats_service.py  test_system_router.py  test_system_service.py  test_wizard_generator.py  test_wizard_router.py  test_wizard_schemas.py  test_wizard_service.py  (+2 more)
(+126 files in other folders)
