[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph-dashboard-backend"
version = "0.1.0"
description = "FastAPI backend for Ralph Dashboard"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.129.0",
  "uvicorn==0.38.0",
  "watchdog>=5.0,<7.0",
  "GitPython>=3.1,<4.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "passlib[bcrypt]>=1.7,<2.0",
  "aiosqlite>=0.20,<1.0",
  "pydantic>=2.11,<3.0",
  "psutil>=5.9,<8.0",
  "anthropic>=0.52,<1.0",
]

[project.scripts]
ralph-dashboard-init-user = "app.auth.setup_user:cli"

[project.optional-dependencies]
dev = [
  "ruff>=0.13,<0.15",
  "pytest>=8.4,<9.0",
  "pytest-timeout>=2.3,<3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
